--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-ga": "^2.2.0",
+    "react-router": "^3.0.2",
     "react-scripts": "1.0.13"
   },
   "scripts": {
